md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -50,12 +50,13 @@ Examples:
 - `torch.rand(size=(2,3))` $\Rightarrow$ `tensor([[0.9920, 0.1177, 0.4073],[0.1193,0.9847,0.1559]])`
 - `torch.zeros(2)` $\Rightarrow$ `tensor([0., 0.])`
 - `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
+- `zero_to_ten = torch.arange(start=0, end=10, step=1)` $\Rightarrow$ `tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMT
-QwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2
-ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MD
-MsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMzc3
-MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEyMjUxMj
-cyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4LDYyODEyNzQ5LDU1
-OTI2MTY5OF19
+eyJoaXN0b3J5IjpbLTEwMTA0OTQwOTMsLTE5ODI1MzQzNDgsLT
+E5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4
+Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4OD
+A5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0
+MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5OD
+g2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4
+LDYyODEyNzQ5XX0=
 -->
