--- a/md/00.md
+++ b/md/00.md
@@ -43,7 +43,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 
 We can create **random** tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
 
-Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)). You can copy the shape of another tensor but fill it with [zeros]() (or [ones]())
+Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)). You can copy the shape of another tensor but fill it with zeros (or ones) using [`torch.zeros_like()`](https://pytorch.org/docs/stable/generated/torch.zeros_like.html) or [`torch.ones_li`]().
 
 You can also create a 1-D tensor that is populated with an arithmetic progression using the [`torch.arange()`](https://pytorch.org/docs/stable/generated/torch.arange.html?highlight=arange#torch.arange) function.
 
@@ -55,11 +55,11 @@ Examples:
 - `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
 - `zero_to_ten = torch.arange(start=0, end=10, step=1)` $\Rightarrow$ `tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NTA2MjYwNzcsLTE5ODI1MzQzNDgsLT
-E5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4
-Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4OD
-A5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0
-MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5OD
-g2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4
-LDYyODEyNzQ5XX0=
+eyJoaXN0b3J5IjpbMTQ3ODQ1NTU5NiwtMTk4MjUzNDM0OCwtMT
+k5MTU3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgy
+NzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MD
+ksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQw
+OTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4OD
+Y4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgs
+NjI4MTI3NDldfQ==
 -->
