md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -54,15 +54,18 @@ Examples:
 - `torch.zeros(2)` $\Rightarrow$ `tensor([0., 0.])`
 - `torch.ones(size=(1,2))` $\Rightarrow$ `tensor([[1., 1.]])`
 - `zero_to_ten = torch.arange(start=0, end=10, step=1)` $\Rightarrow$ `tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])`
+- `torch.zeros_like(input=zero_to_ten)` $\Rightarrow$ `tensor([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])`
 
 
-### Tensor Datatypes
+### Tensor datatypes
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MTU2OTEyNTYsLTE5ODI1MzQzNDgsLT
-E5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4
-Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4OD
-A5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0
-MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5OD
-g2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwyMTI4NjA0MTM4
-LDYyODEyNzQ5XX0=
+eyJoaXN0b3J5IjpbMTY0OTQxNzE1NywtMTk4MjUzNDM0OCwtMT
+k5MTU3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgy
+NzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MD
+ksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQw
+OTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4OD
+Y4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgs
+NjI4MTI3NDldfQ==
 -->
