md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -58,14 +58,15 @@ Examples:
 
 
 ### Tensor datatypes
+https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=huKZ6QlYTGe7
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY0OTQxNzE1NywtMTk4MjUzNDM0OCwtMT
-k5MTU3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgy
-NzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MD
-ksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQw
-OTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4OD
-Y4MCwtMTIyNTEyNzI1NywxNzQ2MTE5NjA0LDIxMjg2MDQxMzgs
-NjI4MTI3NDldfQ==
+eyJoaXN0b3J5IjpbMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOT
+kxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3
+NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOS
+wxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5
+NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4Nj
+gwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2
+MjgxMjc0OV19
 -->
