md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -43,7 +43,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 
 We can create **random** tensors using `torch.rand()`. By default, the datatype is `torch.float32` and the numbers are in the interval `[0,1)`. You can see how to change those and more details [here](https://pytorch.org/docs/stable/generated/torch.rand.html?highlight=rand#torch.rand).
 
-Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)). You can copy the shape of another tensor but fill it with zeros (or ones) using [`torch.zeros_like()`](https://pytorch.org/docs/stable/generated/torch.zeros_like.html) or [`torch.ones_like`](https://pytorch.org/docs/1.9.1/generated/torch.ones_like.html).
+Similarly, you can create tensors full of [**zeros**](https://pytorch.org/docs/stable/generated/torch.zeros.html?highlight=zeros#torch.zeros) (or [**ones**](https://pytorch.org/docs/stable/generated/torch.ones.html?highlight=ones#torch.ones)). You can copy the shape of another tensor but fill it with zeros (or ones) using [`torch.zeros_like()`](https://pytorch.org/docs/stable/generated/torch.zeros_like.html) or [`torch.ones_like()`](https://pytorch.org/docs/1.9.1/generated/torch.ones_like.html).
 
 You can also create a 1-D tensor that is populated with an arithmetic progression using the [`torch.arange()`](https://pytorch.org/docs/stable/generated/torch.arange.html?highlight=arange#torch.arange) function.
 
@@ -62,11 +62,11 @@ https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/ma
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOT
-kxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3
-NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOS
-wxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5
-NzU3MjcsLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4Nj
-gwLC0xMjI1MTI3MjU3LDE3NDYxMTk2MDQsMjEyODYwNDEzOCw2
-MjgxMjc0OV19
+eyJoaXN0b3J5IjpbLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5OD
+I1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0
+MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4Nj
+MsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5
+NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MT
+g0LC0yMTM5ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwy
+MTI4NjA0MTM4XX0=
 -->
