--- a/md/00.md
+++ b/md/00.md
@@ -4,6 +4,8 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 
 ---------------- 
 
+## BLaa Blaaa
+
 ### Useful links:
 - [The guide i'm following](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb) 
 - [Github link ](https://github.com/mrdbourke/pytorch-deep-learning)
@@ -62,11 +64,11 @@ https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/ma
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5OD
-I1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0
-MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4Nj
-MsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5
-NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjExLC0yMTQ2MDA2MT
-g0LC0yMTM5ODg2ODAsLTEyMjUxMjcyNTcsMTc0NjExOTYwNCwy
-MTI4NjA0MTM4XX0=
+eyJoaXN0b3J5IjpbNDkxMzExOTg3LC0yNzMwMTQ2MjQsMzI5Nj
+A1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1
+NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0My
+wtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5
+NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMS
+wtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3MjU3LDE3
+NDYxMTk2MDRdfQ==
 -->
