md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -4,8 +4,6 @@ This is me documenting the process of learning ML & AI using PyTorch. I'm going 
 
 ---------------- 
 
-## BLaa Blaaa
-
 ### Useful links:
 - [The guide i'm following](https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb) 
 - [Github link ](https://github.com/mrdbourke/pytorch-deep-learning)
@@ -64,11 +62,11 @@ https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/ma
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDkxMzExOTg3LC0yNzMwMTQ2MjQsMzI5Nj
-A1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1
-NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0My
-wtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5
-NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMS
-wtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0xMjI1MTI3MjU3LDE3
-NDYxMTk2MDRdfQ==
+eyJoaXN0b3J5IjpbLTI3MzAxNDYyNCwtMjczMDE0NjI0LDMyOT
+YwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2
+NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0ND
+MsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMywtODgz
+OTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMT
+EsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1Nywx
+NzQ2MTE5NjA0XX0=
 -->
