--- a/md/00.md
+++ b/md/00.md
@@ -59,15 +59,17 @@ Examples:
 
 
 ### Tensor datatypes
-https://colab.research.google.com/github/mrdbourke/pytorch-deep-learning/blob/main/00_pytorch_fundamentals.ipynb#scrollTo=huKZ6QlYTGe7
+
+You can
+ 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOT
-YwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2
-NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0ND
-MsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMywtODgz
-OTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMT
-EsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwtMTIyNTEyNzI1Nywx
-NzQ2MTE5NjA0XX0=
+eyJoaXN0b3J5IjpbNjg3OTEyNjkxLDE2Nzk1MzcwNzQsLTI3Mz
+AxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1Nzkz
+MDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC
+0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3
+NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNy
+wtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEy
+MjUxMjcyNTddfQ==
 -->
