--- a/md/00.md
+++ b/md/00.md
@@ -60,12 +60,11 @@ Examples:
 
 ### Tensor datatypes
 
-You can
- 
+You can explicitly choose the datatype for your tensor using the [attribute](https://pytorch.org/docs/stable/tensor_attributes.html) `torch.` 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjg3OTEyNjkxLDE2Nzk1MzcwNzQsLTI3Mz
+eyJoaXN0b3J5IjpbOTkwNjU3NzYyLDE2Nzk1MzcwNzQsLTI3Mz
 AxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1Nzkz
 MDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC
 0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3
