md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -60,15 +60,20 @@ Examples:
 
 ### Tensor datatypes
 
-You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute](https://pytorch.org/docs/stable/tensor_attributes.html) [`torch.dtype`]() 
+You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype).
+``` 
+float_16_tensor = torch.tensor([3.0,  6.0,  9.0],
+dtype=torch.float16)  # torch.half would also work
+float_16_tensor.dtype
+```
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTI2OTI4MjYwMywxNjc5NTM3MDc0LC0yNz
-MwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5
-MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNy
-wtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4
-NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3Mj
-csLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0x
-MjI1MTI3MjU3XX0=
+eyJoaXN0b3J5IjpbMjczMjI4NTM5LDE2Nzk1MzcwNzQsLTI3Mz
+AxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1Nzkz
+MDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC
+0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3
+NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNy
+wtMzc3MDA2MjExLC0yMTQ2MDA2MTg0LC0yMTM5ODg2ODAsLTEy
+MjUxMjcyNTddfQ==
 -->
