md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -62,18 +62,17 @@ Examples:
 
 You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype).
 
-``
-tensor = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)
-float_16_tensor.dtype`` $\Rightarrow$
+``tensor = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)``
+``float_16_tensor.dtype`` $\Rightarrow$ `torch.float16`
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUwMjY2NzA5NCwxNjc5NTM3MDc0LC0yNz
-MwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5
-MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNy
-wtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4
-NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3Mj
-csLTM3NzAwNjIxMSwtMjE0NjAwNjE4NCwtMjEzOTg4NjgwLC0x
-MjI1MTI3MjU3XX0=
+eyJoaXN0b3J5IjpbLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMj
+czMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3
+OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5Mj
+csLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQw
+ODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1Nz
+I3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwt
+MTIyNTEyNzI1N119
 -->
