--- a/md/00.md
+++ b/md/00.md
@@ -60,19 +60,18 @@ Examples:
 
 ### Tensor datatypes
 
-You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype).
-
-``tensor = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)``
-``float_16_tensor.dtype`` $\Rightarrow$ `torch.float16`
+You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:
+``s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)``
+``s.dtype`` $\Rightarrow$ `torch.float16`
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMj
-czMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3
-OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5Mj
-csLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQw
-ODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1Nz
-I3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQsLTIxMzk4ODY4MCwt
-MTIyNTEyNzI1N119
+eyJoaXN0b3J5IjpbLTIwNjY4OTQxMjcsLTEzNTg1NDQ4MDksMT
+Y3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUz
+NDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOT
+I4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4
+Njg5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1ND
+Y2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQs
+LTIxMzk4ODY4MF19
 -->
