md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -65,13 +65,14 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 ``s.dtype`` $\Rightarrow$ `torch.float16`
 
 
-
+### Tensor device and shape
+qw
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNjY4OTQxMjcsLTEzNTg1NDQ4MDksMT
-Y3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUz
-NDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOT
-I4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2MjMwNDg2Myw4
-Njg5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5LDE0Mjk1ND
-Y2ODAsNDQwOTc1NzI3LC0zNzcwMDYyMTEsLTIxNDYwMDYxODQs
-LTIxMzk4ODY4MF19
+eyJoaXN0b3J5IjpbMTcwNjUzNjU2MywtMjA2Njg5NDEyNywtMT
+M1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1
+Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1ND
+UsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0Mywt
+ODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5Nz
+cxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMSwt
+MjE0NjAwNjE4NF19
 -->
