md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -65,10 +65,10 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 ``s.dtype`` $\Rightarrow$ `torch.float16`
 
 
-### Tensor device and shape
-qw
+### Tensor device and size
+The size is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the shape of the tensor. 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcwNjUzNjU2MywtMjA2Njg5NDEyNywtMT
+eyJoaXN0b3J5IjpbMTgxNzAzNDk3MSwtMjA2Njg5NDEyNywtMT
 M1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1
 Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1ND
 UsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0Mywt
