--- a/md/00.md
+++ b/md/00.md
@@ -66,13 +66,13 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 
 
 ### Tensor device and size
-The size is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the shape of the tensor. 
+The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgxNzAzNDk3MSwtMjA2Njg5NDEyNywtMT
-M1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1
-Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1ND
-UsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0Mywt
-ODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5Nz
-cxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMSwt
-MjE0NjAwNjE4NF19
+eyJoaXN0b3J5IjpbOTUwOTExNjg2LC0yMDY2ODk0MTI3LC0xMz
+U4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUz
+NzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NS
+wtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04
+NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3Nz
+EyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywtMzc3MDA2MjExLC0y
+MTQ2MDA2MTg0XX0=
 -->
