md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -39,6 +39,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
+Note: `ndim` is alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
 
 ### Creating tensors
 
@@ -68,11 +69,11 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 ### Tensor device and size
 The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywtMT
-M1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1
-Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1ND
-UsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0Mywt
-ODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5Nz
-cxMjksMTQyOTU0NjY4MCw0NDA5NzU3MjcsLTM3NzAwNjIxMSwt
-MjE0NjAwNjE4NF19
+eyJoaXN0b3J5IjpbMjA2ODc2ODI3MywxMzUyMjAyMjU1LC0yMD
+Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
+NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
+UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
+MzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3Nz
+E0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywt
+Mzc3MDA2MjExXX0=
 -->
