--- a/md/00.md
+++ b/md/00.md
@@ -39,7 +39,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
-Note: `ndim` is alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
+Note: [`ndim`](https://pytorch.org/docs/stable/generated/torch.Tensor.ndim.html?highlight=tensor+ndim#torch.Tensor.ndim) is alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
 
 ### Creating tensors
 
@@ -68,12 +68,17 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 
 ### Tensor device and size
 The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
+` t = torch.tensor(data=[[1,2,3]],device='cpu')
+print(t.size(),t.device,sep='\n')
+
+torch.Size([1, 3])
+cpu`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA2ODc2ODI3MywxMzUyMjAyMjU1LC0yMD
-Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
-NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
-UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
-MzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3Nz
-E0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywt
-Mzc3MDA2MjExXX0=
+eyJoaXN0b3J5IjpbNjI3ODA4Nzc1LDEzNTIyMDIyNTUsLTIwNj
+Y4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0
+NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNS
+wxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEz
+NjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MT
+QwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0z
+NzcwMDYyMTFdfQ==
 -->
