md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -65,16 +65,16 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 ``s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)``
 ``s.dtype`` $\Rightarrow$ `torch.float16`
 
-
 ### Tensor device and size
-The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
-` t = torch.tensor(data=[[1,2,3]],device='cpu')
-print(t.size(),t.device,sep='\n')
 
-torch.Size([1, 3])
-cpu`
+The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
+`t = torch.tensor(data=[[1,2,3]], device='cpu')`
+`print(t.size(), t.device, sep='\n')`
+
+`torch.Size([1, 3])`
+`cpu`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjI3ODA4Nzc1LDEzNTIyMDIyNTUsLTIwNj
+eyJoaXN0b3J5IjpbNjExNzk4NDA5LDEzNTIyMDIyNTUsLTIwNj
 Y4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0
 NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNS
 wxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEz
