--- a/md/00.md
+++ b/md/00.md
@@ -67,18 +67,18 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 
 ### Tensor device and size
 
-The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
+The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. If `dim` is specified, `size(int)` returns an int holding the size of that dimension. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
 `t = torch.tensor(data=[[1,2,3]], device='cpu')`
 `print(t.size(), t.device, sep='\n')`
 
 `torch.Size([1, 3])`
 `cpu`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjExNzk4NDA5LDEzNTIyMDIyNTUsLTIwNj
-Y4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0
-NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNS
-wxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEz
-NjY4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MT
-QwMywtODgzOTc3MTI5LDE0Mjk1NDY2ODAsNDQwOTc1NzI3LC0z
-NzcwMDYyMTFdfQ==
+eyJoaXN0b3J5IjpbMjEyMTk4NjAyNywxMzUyMjAyMjU1LC0yMD
+Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
+NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
+UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
+MzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3Nz
+E0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywt
+Mzc3MDA2MjExXX0=
 -->
