--- a/md/00.md
+++ b/md/00.md
@@ -67,18 +67,20 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 
 ### Tensor device and size
 
-The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. If `dim` is specified, `size(int)` returns an int holding the size of that dimension. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU.
+The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. If `dim` is specified, `size(int)` returns an int holding the size of that dimension. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU. Here is an example:
+
 `t = torch.tensor(data=[[1,2,3]], device='cpu')`
-`print(t.size(), t.device, sep='\n')`
+`print(t.size(),t.device, t.size(1), sep='\n')`
 
 `torch.Size([1, 3])`
 `cpu`
+`3`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEyMTk4NjAyNywxMzUyMjAyMjU1LC0yMD
-Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
-NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
-UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
-MzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3Nz
-E0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywt
-Mzc3MDA2MjExXX0=
+eyJoaXN0b3J5IjpbLTE1NzU4MjgzMDQsMTM1MjIwMjI1NSwtMj
+A2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMw
+MTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5Mz
+A1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywt
+MTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4Nz
+cxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3Mjcs
+LTM3NzAwNjIxMV19
 -->
