md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -61,9 +61,9 @@ Examples:
 
 ### Tensor datatypes
 
-You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:
-``s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)``
-``s.dtype`` $\Rightarrow$ `torch.float16`
+You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:\
+`s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)`\
+`s.dtype` $\Rightarrow$ `torch.float16`
 
 ### Tensor device and size
 
@@ -76,7 +76,7 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `cpu`\
 `3`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA2MTc4NDU0MiwxMzUyMjAyMjU1LC0yMD
+eyJoaXN0b3J5IjpbMTg1NDYzNDY1NiwxMzUyMjAyMjU1LC0yMD
 Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
 NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
 UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
