md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -38,7 +38,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor(4)` $\Rightarrow$ `s.ndim == 0 && s.shape == torch.Size([])`
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
-- `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`
+- `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`\
 Note: [`ndim`](https://pytorch.org/docs/stable/generated/torch.Tensor.ndim.html?highlight=tensor+ndim#torch.Tensor.ndim) is alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
 
 ### Creating tensors
@@ -76,7 +76,7 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `cpu`\
 `3`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg1NDYzNDY1NiwxMzUyMjAyMjU1LC0yMD
+eyJoaXN0b3J5IjpbMTcwNzA4MDkyOCwxMzUyMjAyMjU1LC0yMD
 Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
 NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
 UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
