--- a/md/00.md
+++ b/md/00.md
@@ -39,7 +39,7 @@ A tensor can be just a number, thus having dimension 0, an array, thus having di
 - `s = torch.tensor([1,2,3])` $\Rightarrow$ `s.ndim == 1 && s.shape == torch.Size([3])`
 - `s = torch.tensor([[1,2,3],[2,3,4]])` $\Rightarrow$ `s.ndim == 2 && s.shape == torch.Size([2,3])`
 - `s = torch.tensor([[[1,2,3],[3,6,9],[2,4,5]]])` $\Rightarrow$ `s.ndim == 3 && s.shape == torch.Size([1,3,3])`\
-Note: [`ndim`](https://pytorch.org/docs/stable/generated/torch.Tensor.ndim.html?highlight=tensor+ndim#torch.Tensor.ndim) is alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
+Note: [`ndim`](https://pytorch.org/docs/stable/generated/torch.Tensor.ndim.html?highlight=tensor+ndim#torch.Tensor.ndim) is an alias for [`dim()`](https://pytorch.org/docs/stable/generated/torch.Tensor.dim.html#torch.Tensor.dim)
 
 ### Creating tensors
 
@@ -76,11 +76,11 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `cpu`\
 `3`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcwNzA4MDkyOCwxMzUyMjAyMjU1LC0yMD
-Y2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAx
-NDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMD
-UsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0x
-MzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5LDE0MDg3Nz
-E0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2NjgwLDQ0MDk3NTcyNywt
-Mzc3MDA2MjExXX0=
+eyJoaXN0b3J5IjpbLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMj
+A2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMw
+MTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5Mz
+A1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywt
+MTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4Nz
+cxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3Mjcs
+LTM3NzAwNjIxMV19
 -->
