md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -75,12 +75,14 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `torch.Size([1, 3])`\
 `cpu`\
 `3`
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMj
-A2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMw
-MTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5Mz
-A1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywt
-MTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4Nz
-cxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4MCw0NDA5NzU3Mjcs
-LTM3NzAwNjIxMV19
+eyJoaXN0b3J5IjpbLTExMjg1MTY1MjUsLTE3MzExMTczMjEsMT
+M1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5
+NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0Mz
+Q4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5Mjgs
+MTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2OD
+kwODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4
+MCw0NDA5NzU3MjddfQ==
 -->
