md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -76,13 +76,13 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `cpu`\
 `3`
 
-
+### Basic tensor operations
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMjg1MTY1MjUsLTE3MzExMTczMjEsMT
-M1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5
-NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0Mz
-Q4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5Mjgs
-MTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2OD
-kwODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjksMTQyOTU0NjY4
-MCw0NDA5NzU3MjddfQ==
+eyJoaXN0b3J5IjpbLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMz
+UyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1
+MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzND
+gsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwx
+MzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OT
+A4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2Njgw
+LDQ0MDk3NTcyN119
 -->
