--- a/md/00.md
+++ b/md/00.md
@@ -77,12 +77,13 @@ The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Ten
 `3`
 
 ### Basic tensor operations
+First of all, you can perform fundamental operations (addition (`+`), subtraction (`-`), mutliplication (`*`)) on tensors lik
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMz
-UyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1
-MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzND
-gsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwx
-MzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OT
-A4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEyOSwxNDI5NTQ2Njgw
-LDQ0MDk3NTcyN119
+eyJoaXN0b3J5IjpbLTE3MzMzMTczODEsLTg4MzQ2MjQwMywtMT
+czMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4
+NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNz
+csLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwt
+MTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04Nj
+IzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEy
+OSwxNDI5NTQ2NjgwXX0=
 -->
