md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -69,17 +69,23 @@ You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors
 
 The [`torch.size(dim=None)`](https://pytorch.org/docs/stable/generated/torch.Tensor.size.html?highlight=tensor+size#torch.Tensor.size) method is [equivalent to](https://github.com/pytorch/pytorch/issues/5544) the `torch.shape` attribute of the tensor. If `dim` is specified, `size(int)` returns an int holding the size of that dimension. [`torch.device`](https://pytorch.org/docs/stable/tensor_attributes.html?highlight=device#torch.device) is an object representing where the tensor is or will be allocated. Default is CPU. Here is an example:
 
-`t = torch.tensor(data=[[1,2,3]], device='cpu')` \
-`print(t.size(),t.device, t.size(1), sep='\n')`
+```py
+t = torch.tensor(data=[[1,2,3]], device='cpu')
+print(t.size(),t.device, t.size(1), sep='\n')
+```
 
 `torch.Size([1, 3])`\
 `cpu`\
 `3`
 
 ### Basic tensor operations
-First of all, you can perform fundamental operations (addition (`+`), subtraction (`-`), mutliplication (`*`)) on tensors lik
+First of all, you can perform fundamental operations (addition (`+`), subtraction (`-`), mutliplication (`*`)) on tensors like this:
+```py
+tensor = torch.tensor([1,  2,  3])`
+`tensor + 10`
+```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzMzMTczODEsLTg4MzQ2MjQwMywtMT
+eyJoaXN0b3J5IjpbLTIwNDQzODA4NzMsLTg4MzQ2MjQwMywtMT
 czMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4
 NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNz
 csLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwt
