md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -62,7 +62,9 @@ Examples:
 ### Tensor datatypes
 
 You can explicitly choose the [datatype](https://pytorch.org/docs/stable/tensors.html#data-types) for your tensor using the [attribute `torch.dtype`](https://pytorch.org/docs/stable/tensor_attributes.html#torch.dtype) like this:\
-`s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)`\
+```py 
+s = torch.tensor([3.0, 6.0, 9.0],dtype=torch.float16)
+```
 `s.dtype` $\Rightarrow$ `torch.float16`
 
 ### Tensor device and size
@@ -85,11 +87,11 @@ tensor = torch.tensor([1,  2,  3])`
 `tensor + 10`
 ```
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNDQzODA4NzMsLTg4MzQ2MjQwMywtMT
-czMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4
-NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNz
-csLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwt
-MTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04Nj
-IzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEy
-OSwxNDI5NTQ2NjgwXX0=
+eyJoaXN0b3J5IjpbNjA1MTA0NjMyLC04ODM0NjI0MDMsLTE3Mz
+ExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0
+NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC
+0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4
+MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMz
+A0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAzLC04ODM5NzcxMjks
+MTQyOTU0NjY4MF19
 -->
