--- a/md/00.md
+++ b/md/00.md
@@ -83,15 +83,16 @@ print(t.size(),t.device, t.size(1), sep='\n')
 ### Basic tensor operations
 First of all, you can perform fundamental operations (addition (`+`), subtraction (`-`), mutliplication (`*`)) on tensors like this:
 ```py
-tensor = torch.tensor([1,  2,  3])
-tensor + 10
+t = torch.tensor([1,  2,  3])
 ```
+- `t += 1` $\Rightarrow$ `t = tensor([[2, 3, 4]])`
+`t += 1` $\Rightarrow$ `t = tensor([[2, 3, 4]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzODE0NjUwMjgsLTg4MzQ2MjQwMywtMT
-czMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4
-NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNz
-csLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwt
-MTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04Nj
-IzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEy
-OSwxNDI5NTQ2NjgwXX0=
+eyJoaXN0b3J5IjpbMTQ4ODk0NzQ4NywtODgzNDYyNDAzLC0xNz
+MxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMjcsLTEzNTg1
+NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3Ny
+wtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0x
+ODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2Mj
+MwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5
+LDE0Mjk1NDY2ODBdfQ==
 -->
