--- a/md/00.md
+++ b/md/00.md
@@ -86,9 +86,11 @@ First of all, you can perform fundamental operations (addition (`+`), subtractio
 t = torch.tensor([1,  2,  3])
 ```
 - `t += 1` $\Rightarrow$ `t = tensor([[2, 3, 4]])`
-`t += 1` $\Rightarrow$ `t = tensor([[2, 3, 4]])`
+- `t -= 1` $\Rightarrow$ `t = tensor([[0, 1, 2]])`
+- `t *= 2` $\Rightarrow$ `t = tensor([[2, 4, 6]])`
+Note: `t+1` does not modify `t`; `t=t+1` is required.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQ4ODk0NzQ4NywtODgzNDYyNDAzLC0xNz
+eyJoaXN0b3J5IjpbMTI2ODEzODg0MywtODgzNDYyNDAzLC0xNz
 MxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMjcsLTEzNTg1
 NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3Ny
 wtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0x
