--- a/md/00.md
+++ b/md/00.md
@@ -89,13 +89,15 @@ t = torch.tensor([1,  2,  3])
 - `t -= 1` $\Rightarrow$ `t = tensor([[0, 1, 2]])`
 - `t *= 2` $\Rightarrow$ `t = tensor([[2, 4, 6]])`
 
-Note: `t+1` does not modify `t`; `t=t+1` is required.
+Note: 
+a) `t+1` does not modify `t`; `t=t+1` is required.
+b) division (`/`) works too 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3NDY4NzY4MTksLTg4MzQ2MjQwMywtMT
-czMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4
-NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNz
-csLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwt
-MTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04Nj
-IzMDQ4NjMsODY4OTA4ODA5LDE0MDg3NzE0MDMsLTg4Mzk3NzEy
-OSwxNDI5NTQ2NjgwXX0=
+eyJoaXN0b3J5IjpbLTY2NzQ5NzQ0NywtODgzNDYyNDAzLC0xNz
+MxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMjcsLTEzNTg1
+NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3Ny
+wtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0x
+ODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2Mj
+MwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5
+LDE0Mjk1NDY2ODBdfQ==
 -->
