md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -92,12 +92,13 @@ t = torch.tensor([1,  2,  3])
 Note: 
 a) `t+1` does not modify `t`; `t=t+1` is required.
 b) division (`/`) works too 
+c) E
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY2NzQ5NzQ0NywtODgzNDYyNDAzLC0xNz
-MxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMjcsLTEzNTg1
-NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMyOTYwNTM3Ny
-wtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4NzM2NTQ1LC0x
-ODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0NDMsLTg2Mj
-MwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQwMywtODgzOTc3MTI5
-LDE0Mjk1NDY2ODBdfQ==
+eyJoaXN0b3J5IjpbLTI5NDc4NTEyNCwtNjY3NDk3NDQ3LC04OD
+M0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5
+NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2Mj
+QsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0
+MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2Nj
+gzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAz
+LC04ODM5NzcxMjldfQ==
 -->
