md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -92,9 +92,9 @@ t = torch.tensor([1,  2,  3])
 Note: 
 a) `t+1` does not modify `t`; `t=t+1` is required.
 b) division (`/`) works too 
-c) E
+c) Functions [`torch.add()
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NDc4NTEyNCwtNjY3NDk3NDQ3LC04OD
+eyJoaXN0b3J5IjpbLTc2Mzc4NzU4OSwtNjY3NDk3NDQ3LC04OD
 M0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5
 NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2Mj
 QsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0
