md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -92,13 +92,18 @@ t = torch.tensor([1,  2,  3])
 Note: 
 a) `t+1` does not modify `t`; `t=t+1` is required.
 b) division (`/`) works too 
-c) Functions [`torch.add()
+c) Functions [`torch.add()`](https://pytorch.org/docs/stable/generated/torch.add.html) and [`torch.mul()`](https://pytorch.org/docs/stable/generated/torch.mul.html#torch.mul) could be used too. Those can add/multiply 2 tensors too like this:
+```py
+t = torch.tensor([[1,2,3,4]])
+w = torch.tensor([[-1],[-2]])
+```
+`torch.add(t
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc2Mzc4NzU4OSwtNjY3NDk3NDQ3LC04OD
-M0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5
-NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2Mj
-QsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0
-MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2Nj
-gzODQ0MywtODYyMzA0ODYzLDg2ODkwODgwOSwxNDA4NzcxNDAz
-LC04ODM5NzcxMjldfQ==
+eyJoaXN0b3J5IjpbLTE0NDczMDcwMjksLTY2NzQ5NzQ0NywtOD
+gzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4
+OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0Nj
+I0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwx
+NDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNj
+Y4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQw
+MywtODgzOTc3MTI5XX0=
 -->
