md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -97,9 +97,10 @@ c) Functions [`torch.add()`](https://pytorch.org/docs/stable/generated/torch.add
 t = torch.tensor([[1,2,3,4]])
 w = torch.tensor([[-1],[-2]])
 ```
-`torch.add(t
+`torch.add(t,w)` $\Rightarrow$ `tensor([[0,1,2,3],[-1,0,1,2]])`
+`torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NDczMDcwMjksLTY2NzQ5NzQ0NywtOD
+eyJoaXN0b3J5IjpbLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtOD
 gzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4
 OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0Nj
 I0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwx
