md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -99,12 +99,15 @@ w = torch.tensor([[-1],[-2]])
 ```
 `torch.add(t,w)` $\Rightarrow$ `tensor([[0,1,2,3],[-1,0,1,2]])`
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
+
+### Matrix multiplication
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtOD
-gzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4
-OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0Nj
-I0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwx
-NDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNj
-Y4Mzg0NDMsLTg2MjMwNDg2Myw4Njg5MDg4MDksMTQwODc3MTQw
-MywtODgzOTc3MTI5XX0=
+eyJoaXN0b3J5IjpbLTEyODA2OTQ0MiwtMTcxOTkxMzM3NiwtNj
+Y3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIw
+MjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MD
+c0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0x
+OTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwOD
+I3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgw
+OSwxNDA4NzcxNDAzXX0=
 -->
