--- a/md/00.md
+++ b/md/00.md
@@ -101,13 +101,13 @@ w = torch.tensor([[-1],[-2]])
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
-
+Matrix multiplication can be performed
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyODA2OTQ0MiwtMTcxOTkxMzM3NiwtNj
-Y3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIw
-MjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MD
-c0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0x
-OTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwOD
-I3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgw
-OSwxNDA4NzcxNDAzXX0=
+eyJoaXN0b3J5IjpbOTU2NzQ4NTI4LC0xNzE5OTEzMzc2LC02Nj
+c0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAy
+MjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNz
+QsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5
+OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mj
+c1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5
+LDE0MDg3NzE0MDNdfQ==
 -->
