md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -101,9 +101,9 @@ w = torch.tensor([[-1],[-2]])
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
-Matrix multiplication can be performed
+Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul) or operator `@
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU2NzQ4NTI4LC0xNzE5OTEzMzc2LC02Nj
+eyJoaXN0b3J5IjpbMjQ5MjcxODE0LC0xNzE5OTEzMzc2LC02Nj
 c0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAy
 MjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNz
 QsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5
