md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -101,13 +101,13 @@ w = torch.tensor([[-1],[-2]])
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
-Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul) or operator `@
+Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul) or operator `@`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQ5MjcxODE0LC0xNzE5OTEzMzc2LC02Nj
-c0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAy
-MjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNz
-QsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5
-OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mj
-c1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4NjMsODY4OTA4ODA5
-LDE0MDg3NzE0MDNdfQ==
+eyJoaXN0b3J5IjpbLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNj
+Y3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIw
+MjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MD
+c0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0x
+OTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwOD
+I3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgw
+OSwxNDA4NzcxNDAzXX0=
 -->
