md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -101,13 +101,13 @@ w = torch.tensor([[-1],[-2]])
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
-Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul) or operator `@`.
+Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul), [`torch.mm()`](https://pytorch.org/docs/stable/generated/torch.mm.html?highlight=mm#torch.mm) or operator `@`.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk1ODY2MjY2NCwtMTcxOTkxMzM3NiwtNj
-Y3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTczMjEsMTM1MjIw
-MjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOSwxNjc5NTM3MD
-c0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgyNTM0MzQ4LC0x
-OTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4NDE5MjgsMTMwOD
-I3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYzLDg2ODkwODgw
-OSwxNDA4NzcxNDAzXX0=
+eyJoaXN0b3J5IjpbLTE5NTc0NDE0MjksLTk1ODY2MjY2NCwtMT
+cxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzEx
+MTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0ND
+gwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0x
+OTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4Mz
+I4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0
+ODYzLDg2ODkwODgwOV19
 -->
