--- a/md/00.md
+++ b/md/00.md
@@ -101,13 +101,13 @@ w = torch.tensor([[-1],[-2]])
 `torch.mul(t,w)` $\Rightarrow$ `tensor([[-1,-2,-3,-4],[-2,-4,-6,-8]])`
 
 ### Matrix multiplication
-Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul), [`torch.mm()`](https://pytorch.org/docs/stable/generated/torch.mm.html?highlight=mm#torch.mm) or operator `@`.
+Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul), [`torch.mm()`](https://pytorch.org/docs/stable/generated/torch.mm.html?highlight=mm#torch.mm) or operator `@` (which is equivalent to `matmul`). The difference between `mm` and `matmul` is that matmul
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5NTc0NDE0MjksLTk1ODY2MjY2NCwtMT
-cxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzEx
-MTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0ND
-gwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0x
-OTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4Mz
-I4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0
-ODYzLDg2ODkwODgwOV19
+eyJoaXN0b3J5IjpbLTI1MDEzNjY4OCwtOTU4NjYyNjY0LC0xNz
+E5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTEx
+NzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0OD
+A5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5
+ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMj
+g0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4
+NjMsODY4OTA4ODA5XX0=
 -->
