md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -102,12 +102,18 @@ w = torch.tensor([[-1],[-2]])
 
 ### Matrix multiplication
 Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.org/docs/stable/generated/torch.matmul.html?highlight=matmul#torch.matmul), [`torch.mm()`](https://pytorch.org/docs/stable/generated/torch.mm.html?highlight=mm#torch.mm) or operator `@` (which is equivalent to `matmul`). The difference between `mm` and `matmul` is that `matmul` performs [broadcasting](https://pytorch.org/docs/stable/notes/broadcasting.html) while `mm` doesn't.
+```py
+a = torch.randn(2,3,3)
+b = torch.randn(3,2)
+```
+`torch.mm(a,b)` $\Rightarrow$ runtime error
+`torch.matmul(a,b)` $\Rightarrow$
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjAyMTgyNTgsLTk1ODY2MjY2NCwtMTcxOT
-kxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0MDMsLTE3MzExMTcz
-MjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNywtMTM1ODU0NDgwOS
-wxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5NjA1Mzc3LC0xOTgy
-NTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3MzY1NDUsLTE4MzI4ND
-E5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0MywtODYyMzA0ODYz
-LDg2ODkwODgwOV19
+eyJoaXN0b3J5IjpbMTU4MDI2NjY5NSwtOTU4NjYyNjY0LC0xNz
+E5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTEx
+NzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0OD
+A5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5
+ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMj
+g0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4
+NjMsODY4OTA4ODA5XX0=
 -->
