md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -107,9 +107,12 @@ a = torch.randn(2,3,3)
 b = torch.randn(3,2)
 ```
 `torch.mm(a,b)` $\Rightarrow$ runtime error
-`torch.matmul(a,b)` $\Rightarrow$
+`torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
+Note:
+a) `torch.mm()` only accepts 2D tensors
+b) [`torch.randn
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU4MDI2NjY5NSwtOTU4NjYyNjY0LC0xNz
+eyJoaXN0b3J5IjpbMTgwNTY4NjczNywtOTU4NjYyNjY0LC0xNz
 E5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTEx
 NzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0OD
 A5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5
