md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -110,9 +110,10 @@ b = torch.randn(3,2)
 `torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
 Note:
 a) `torch.mm()` only accepts 2D tensors
-b) [`torch.randn
+b) [`torch.randn`](https://pytorch.org/docs/stable/generated/torch.randn.html?highlight=randn#torch.randn)
+c) `torch.matmul()` (and `@`) can also perform *dot product* and *matrix-vector product*
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgwNTY4NjczNywtOTU4NjYyNjY0LC0xNz
+eyJoaXN0b3J5IjpbMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNz
 E5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTEx
 NzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0OD
 A5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5
