--- a/md/00.md
+++ b/md/00.md
@@ -111,13 +111,18 @@ b = torch.randn(3,2)
 Note:
 a) `torch.mm()` only accepts 2D tensors
 b) [`torch.randn`](https://pytorch.org/docs/stable/generated/torch.randn.html?highlight=randn#torch.randn)
-c) `torch.matmul()` (and `@`) can also perform *dot product* and *matrix-vector product*
+c) `torch.matmul()` (and `@`) can also perform *dot product*, *matrix-vector product* and *batched matrix multiplication*
+```py
+a = torch.tensor([1,2])
+b = torch.tensor([[-1,-2],[-3,-4]])
+```
+`b@a` $\Rightarrow$ `tensor([-5,-11])`
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0MDIyNzY1NywtOTU4NjYyNjY0LC0xNz
-E5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2MjQwMywtMTczMTEx
-NzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0OD
-A5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5
-ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwODczNjU0NSwtMTgzMj
-g0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4NDQzLC04NjIzMDQ4
-NjMsODY4OTA4ODA5XX0=
+eyJoaXN0b3J5IjpbNjA4NTIzNzkzLDE4NDAyMjc2NTcsLTk1OD
+Y2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0
+MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNy
+wtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5
+NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3Mz
+Y1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0
+MywtODYyMzA0ODYzXX0=
 -->
