md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -117,12 +117,13 @@ a = torch.tensor([1,2])
 b = torch.tensor([[-1,-2],[-3,-4]])
 ```
 `b@a` $\Rightarrow$ `tensor([-5,-11])`
+Note that if `a` has an extra pair of square brackets
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjA4NTIzNzkzLDE4NDAyMjc2NTcsLTk1OD
-Y2MjY2NCwtMTcxOTkxMzM3NiwtNjY3NDk3NDQ3LC04ODM0NjI0
-MDMsLTE3MzExMTczMjEsMTM1MjIwMjI1NSwtMjA2Njg5NDEyNy
-wtMTM1ODU0NDgwOSwxNjc5NTM3MDc0LC0yNzMwMTQ2MjQsMzI5
-NjA1Mzc3LC0xOTgyNTM0MzQ4LC0xOTkxNTc5MzA1LDE0MDg3Mz
-Y1NDUsLTE4MzI4NDE5MjgsMTMwODI3NTkyNywtMTM2NjgzODQ0
-MywtODYyMzA0ODYzXX0=
+eyJoaXN0b3J5IjpbLTg1NDgxMjE3OCwxODQwMjI3NjU3LC05NT
+g2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgzNDYy
+NDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMj
+csLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMy
+OTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4Nz
+M2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0
+NDMsLTg2MjMwNDg2M119
 -->
