md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -106,7 +106,7 @@ Matrix multiplication can be performed using [`torch.matmul()`](https://pytorch.
 a = torch.randn(2,3,3)
 b = torch.randn(3,2)
 ```
-`torch.mm(a,b)` $\Rightarrow$ runtime error
+`torch.mm(a,b)` $\Rightarrow$ runtime error (RE)
 `torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
 Note:
 a) `torch.mm()` only accepts 2D tensors
@@ -117,13 +117,13 @@ a = torch.tensor([1,2])
 b = torch.tensor([[-1,-2],[-3,-4]])
 ```
 `b@a` $\Rightarrow$ `tensor([-5,-11])`
-Note that if `a` has an extra pair of square brackets
+Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTg1NDgxMjE3OCwxODQwMjI3NjU3LC05NT
-g2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5NzQ0NywtODgzNDYy
-NDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNTUsLTIwNjY4OTQxMj
-csLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwtMjczMDE0NjI0LDMy
-OTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MTU3OTMwNSwxNDA4Nz
-M2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5MjcsLTEzNjY4Mzg0
-NDMsLTg2MjMwNDg2M119
+eyJoaXN0b3J5IjpbLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOT
+U4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2
+MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MT
+I3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwz
+Mjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwOD
+czNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4
+NDQzLC04NjIzMDQ4NjNdfQ==
 -->
