--- a/md/00.md
+++ b/md/00.md
@@ -90,8 +90,8 @@ t = torch.tensor([1,  2,  3])
 - `t *= 2` $\Rightarrow$ `t = tensor([[2, 4, 6]])`
 
 Note: 
-a) `t+1` does not modify `t`; `t=t+1` is required.
-b) division (`/`) works too 
+a) `t+1` does not modify `t`; `t=t+1` is required.\
+b) division (`/`) works too \
 c) Functions [`torch.add()`](https://pytorch.org/docs/stable/generated/torch.add.html) and [`torch.mul()`](https://pytorch.org/docs/stable/generated/torch.mul.html#torch.mul) could be used too. Those can add/multiply 2 tensors too like this:
 ```py
 t = torch.tensor([[1,2,3,4]])
@@ -109,8 +109,8 @@ b = torch.randn(3,2)
 `torch.mm(a,b)` $\Rightarrow$ runtime error (RE)
 `torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
 Note:
-a) `torch.mm()` only accepts 2D tensors
-b) [`torch.randn`](https://pytorch.org/docs/stable/generated/torch.randn.html?highlight=randn#torch.randn)
+a) `torch.mm()` only accepts 2D tensors\
+b) [`torch.randn`](https://pytorch.org/docs/stable/generated/torch.randn.html?highlight=randn#torch.randn)\
 c) `torch.matmul()` (and `@`) can also perform *dot product*, *matrix-vector product* and *batched matrix multiplication*
 ```py
 a = torch.tensor([1,2])
@@ -119,11 +119,11 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 `b@a` $\Rightarrow$ `tensor([-5,-11])`
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwNjg0OTc1NTIsMTg0MDIyNzY1NywtOT
-U4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0OTc0NDcsLTg4MzQ2
-MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMjU1LC0yMDY2ODk0MT
-I3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQsLTI3MzAxNDYyNCwz
-Mjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OTE1NzkzMDUsMTQwOD
-czNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1OTI3LC0xMzY2ODM4
-NDQzLC04NjIzMDQ4NjNdfQ==
+eyJoaXN0b3J5IjpbLTE0NzI0MTk5MjAsLTEwNjg0OTc1NTIsMT
+g0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0
+OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMj
+U1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQs
+LTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OT
+E1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1
+OTI3LC0xMzY2ODM4NDQzXX0=
 -->
