md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -89,7 +89,7 @@ t = torch.tensor([1,  2,  3])
 - `t -= 1` $\Rightarrow$ `t = tensor([[0, 1, 2]])`
 - `t *= 2` $\Rightarrow$ `t = tensor([[2, 4, 6]])`
 
-Note: 
+Note: \
 a) `t+1` does not modify `t`; `t=t+1` is required.\
 b) division (`/`) works too \
 c) Functions [`torch.add()`](https://pytorch.org/docs/stable/generated/torch.add.html) and [`torch.mul()`](https://pytorch.org/docs/stable/generated/torch.mul.html#torch.mul) could be used too. Those can add/multiply 2 tensors too like this:
@@ -108,7 +108,7 @@ b = torch.randn(3,2)
 ```
 `torch.mm(a,b)` $\Rightarrow$ runtime error (RE)
 `torch.matmul(a,b).size()` $\Rightarrow$ `torch.Size([2, 3, 2])`
-Note:
+Note: \
 a) `torch.mm()` only accepts 2D tensors\
 b) [`torch.randn`](https://pytorch.org/docs/stable/generated/torch.randn.html?highlight=randn#torch.randn)\
 c) `torch.matmul()` (and `@`) can also perform *dot product*, *matrix-vector product* and *batched matrix multiplication*
@@ -119,11 +119,11 @@ b = torch.tensor([[-1,-2],[-3,-4]])
 `b@a` $\Rightarrow$ `tensor([-5,-11])`
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NzI0MTk5MjAsLTEwNjg0OTc1NTIsMT
-g0MDIyNzY1NywtOTU4NjYyNjY0LC0xNzE5OTEzMzc2LC02Njc0
-OTc0NDcsLTg4MzQ2MjQwMywtMTczMTExNzMyMSwxMzUyMjAyMj
-U1LC0yMDY2ODk0MTI3LC0xMzU4NTQ0ODA5LDE2Nzk1MzcwNzQs
-LTI3MzAxNDYyNCwzMjk2MDUzNzcsLTE5ODI1MzQzNDgsLTE5OT
-E1NzkzMDUsMTQwODczNjU0NSwtMTgzMjg0MTkyOCwxMzA4Mjc1
-OTI3LC0xMzY2ODM4NDQzXX0=
+eyJoaXN0b3J5IjpbMTQwNDA1ODk4NCwtMTA2ODQ5NzU1MiwxOD
+QwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5
+NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNT
+UsLTIwNjY4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwt
+MjczMDE0NjI0LDMyOTYwNTM3NywtMTk4MjUzNDM0OCwtMTk5MT
+U3OTMwNSwxNDA4NzM2NTQ1LC0xODMyODQxOTI4LDEzMDgyNzU5
+MjcsLTEzNjY4Mzg0NDNdfQ==
 -->
