md/00.md updated from https://stackedit.io/

--- a/md/00.md
+++ b/md/00.md
@@ -116,10 +116,10 @@ c) `torch.matmul()` (and `@`) can also perform *dot product*, *matrix-vector pro
 a = torch.tensor([1,2])
 b = torch.tensor([[-1,-2],[-3,-4]])
 ```
-`b@a` $\Rightarrow$ `tensor([-5,-11])`
+`b@a` $\Rightarrow$ `tensor([-5,-11])` \
 Note that if `a` would have an extra pair of square brackets (`a = torch.tensor([[1,2]])`), `b@a` would cause a RE. `a@b` would work though.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwNDA1ODk4NCwtMTA2ODQ5NzU1MiwxOD
+eyJoaXN0b3J5IjpbMTU4NDk0NTAxNCwtMTA2ODQ5NzU1MiwxOD
 QwMjI3NjU3LC05NTg2NjI2NjQsLTE3MTk5MTMzNzYsLTY2NzQ5
 NzQ0NywtODgzNDYyNDAzLC0xNzMxMTE3MzIxLDEzNTIyMDIyNT
 UsLTIwNjY4OTQxMjcsLTEzNTg1NDQ4MDksMTY3OTUzNzA3NCwt
